# MiraLingo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml  run_bootstrap_production.py  run_compiled_semantic_eval.py  run_local_mir2en_eval.py  run_mistral_compiled_eval.py  run_optimizer_comparison.py  run_qwen_mir2en_eval.py  run_semantic_eval.py  run_t05_combined_eval.py  temp_project_instructions.md
.miralingo/: miralingo.sqlite3
data/: README.md  pronunciation_tests.csv
data/eval/: devset_random30_en_to_mir_seed20260525.json  devset_s01_bidirectional.json  devset_sentence10_each_direction_seed20260526.json  gepa_val_set.json  judge_curated_100_en_to_mir.json  judge_curated_smoke_en_to_mir.json  test.json  train.json  val.json
data/eval_results/: COMMONNESS_ROUNDTRIP_ANALYSIS.md  EMBEDDING_MIGRATION_REPORT.md  README.md  compiled_semantic_per_example.json  compiled_semantic_vs_exact.json  deepseek_v4_flash_trace.json  error_taxonomy.md  (+35 more)
docs/: PIPER_INTEGRATION.md  README_PIPER.md  TTS_INSTALLATION.md
samples/: README.md
scripts/: README_eval.md  download_wikibook_pdf.py  eval_config.yaml  four_way_sweep.py  generate_samples.py  k_sweep.py  lex.py  pdf_to_markdown.py  run_3c_eval.py  run_evaluation.py  split_eval_data.py  start_miralingo.sh  top_k_sweep.py  translator_adapter.py  verify-ollama.sh
src/: convert_mirad_pdfs_to_markdown.py
tests/: conftest.py  test_cli.py  test_espeak_backend.py  test_grammar_anchors.py  test_ipa.py  test_phonology.py  test_piper_backend.py  test_syllabify.py  test_tokenizer.py
(+283 files in other folders)
