[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirad-tts"
version = "0.1.0"
description = "Mirad text-to-speech preparation: tokenisation and phonology constants."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]